// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date filter component renders correctly 1`] = `
<form>
  <LocalizationProvider
    dateAdapter={[Function]}
  >
    <ForwardRef(DatePicker)
      aria-hidden="true"
      clearText="Clear"
      clearable={true}
      inputFormat="yyyy-MM-dd"
      mask="____-__-__"
      maxDate={2000-01-01T00:00:00.000Z}
      onChange={[Function]}
      renderInput={[Function]}
      value={1999-01-01T00:00:00.000Z}
    />
    <ForwardRef(DatePicker)
      aria-hidden="true"
      clearable={true}
      inputFormat="yyyy-MM-dd"
      mask="____-__-__"
      minDate={1999-01-01T00:00:00.000Z}
      onChange={[Function]}
      renderInput={[Function]}
      value={2000-01-01T00:00:00.000Z}
    />
  </LocalizationProvider>
</form>
`;

exports[`Date filter component useTextFilter hook returns a function which can generate a working text filter 1`] = `
<form>
  <LocalizationProvider
    dateAdapter={[Function]}
  >
    <ForwardRef(DatePicker)
      aria-hidden="true"
      clearText="Clear"
      clearable={true}
      inputFormat="yyyy-MM-dd"
      mask="____-__-__"
      maxDate={2100-01-01T00:00:00.000Z}
      onChange={[Function]}
      renderInput={[Function]}
      value={null}
    />
    <ForwardRef(DatePicker)
      aria-hidden="true"
      clearable={true}
      inputFormat="yyyy-MM-dd"
      mask="____-__-__"
      minDate={1984-01-01T00:00:00.000Z}
      onChange={[Function]}
      renderInput={[Function]}
      value={null}
    />
  </LocalizationProvider>
</form>
`;
